# struvedb

./: .gitignore  Cargo.toml  README.md
examples/: demo.rs  dir_demo.rs  file_demo.rs  in_memory_demo.rs  user.rs
src/: document.rs  lib.rs
src/collections/: collection.rs  dir_based.rs  dir_based_collection.rs  file_based.rs  file_based_collection.rs  in_memory_collection.rs  mod.rs
