[package]
name = "struvedb"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0.203",  features = ["derive"] }
serde_json = { version = "1.0.117" }
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = { version = "0.5.3" }
